--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,15 +1,17 @@
 {
-  "name": "xngllamasearch-dev",
-  "image": "mrhappynice/bplus-xngllamasearch",
-  "runArgs": [
-    "--network=host",
-    "--device=/dev/dri",
-    "--group-add=video"
-  ],
+  "name": "xngllamasearch (Codespaces)",
+  "image": "mrhappynice/bplus-xngllamasearch:latest",
+
+  // Expose the same ports your docker run mapped
+  "forwardPorts": [8080, 3001, 5660, 3000],
+
+  // Bind the repo folders into the paths your container expects
   "mounts": [
-    "source=${localWorkspaceFolder}/config,target=/etc/searxng,type=bind",
-    "source=${localWorkspaceFolder}/data,target=/var/cache/searxng,type=bind"
+    "source=${localWorkspaceFolder}/config,target=/etc/searxng,type=bind,consistency=cached",
+    "source=${localWorkspaceFolder}/data,target=/var/cache/searxng,type=bind,consistency=cached"
   ],
+
+  // Inline (non-secret) env vars, as requested
   "containerEnv": {
     "INSTANCE_NAME": "SearXNG",
     "BASE_URL": "http://localhost:8080/",
@@ -18,13 +20,15 @@
     "AUTH_PASSWORD": "",
     "OPENAI_API_BASE": "http://localhost:1234/v1",
     "LMSTUDIO_API_BASE": "http://localhost:1234/v1",
-    "OPENAI_API_KEY": "sk-proj-xxxxx-x-x-x-hwA",
-    "OPENROUTER_API_KEY": "sk-oxxxxr-xx-xxxx",
-    "GOOGLE_API_KEY": "xxxxx",
-    "MODEL": "bartowski/Llama-3.2-1B-Instruct-GGUF:Q4_K_M",
+    "MODEL": "unsloth/Qwen3-0.6B-GGUF:Q8_0",
     "USE_NATIVE": "1"
-  },
-  "remoteUser": "root",
-  "forwardPorts": [8080],
-  "postCreateCommand": "echo '✅ Loaded - connect to launcher http://localhost:5660'"
+  }
+
+  // (Optional) if you truly want to set keys here, add them—but note they'll live in the repo history
+  // "features": {} // add devcontainer features if you want extra tools installed
+
+  // Ensure the container’s default CMD starts the app.
+  // If your image needs a kick, uncomment the next line to start it after attach:
+  // "postStartCommand": "supervisorctl restart all || true"
 }
+
